# multilayer_perceptron

./: README.md  report.md
src/: .~lock.report.md#  Doxyfile  Makefile
src/controller/: controller.cc  controller.h
src/model/: model_graph.cc  model_graph.h  model_matrix.cc  model_matrix.h  s21_matrix_oop.cc  s21_matrix_oop.h
src/tests/: unit_tests.cc  unit_tests.h
src/view/: CMakeLists.txt  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  painter.cc  painter.h  qcustomplot_pch.h  test_dialog.cc  test_dialog.h
